# gemini-mcp-client

./: .env.example  .gitignore  .pre-commit-config.yaml  ADK_COMPLETE_GUIDE.md  ADK_SETUP_GUIDE.md  README.md  adk_manager.sh  claude_desktop_config_correct.json  claude_desktop_config_fixed.json  cleanup_ports.sh  configure_models.py  example_mcp_config.json  full_mcp_agent-README.md  place in the config folder with your mcp as servers.json  pyproject.toml  setup.sh  simple_test_agent.py  start_adk_with_env.sh  validate_config.py
adk_agent_samples/mcp_agent/: agent.py
adk_agent_samples/mcp_client_agent/: agent.py
agents/code_executor_agent/: __init__.py  agent.py
agents/configurable_multi_agent/: agent.py
agents/full_mcp_agent/: .env.example  __init__.py  agent.py
agents/multi_mcp_agent/: __init__.py  agent.py
agents/sqlite_agent/: agent.py
archive/: ADK_SETUP_GUIDE.md  FIXING_CLAUDE_DESKTOP.md  README.md  best_practices.md  server_configuration_guide.md
archive/agent_archive/: agent_config.json
archive/agent_archive/arxiv_agent/: __init__.py  agent.py
archive/agent_archive/chroma_agent/: __init__.py  agent.py
archive/ai_random_code/: agent_ollama.py
config/: client.json  models.json  servers.json
examples/: echo_server.py  model_selection_example.py  server_config_demo.py  usage_example.py
mcp_gemini_client/: __init__.py  cli.py  client.py  config.py
prompts/: troubleshooting.md  usage_guide.md
servers/: gemini_mcp_server.py  simple_test_server.py
tests/: __init__.py  simple_test_agent.py  test_client.py
(+24 files in other folders)
